--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,7 +37,8 @@ jobs:
         if: ${{ success() && github.event_name == 'push' && !contains(toJson(join(github.event.commits.*.message)), '#skip') }}
         uses: rjstone/discord-webhook-notify@v2
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: success
           message: |
             **Deployment Successful**
             A new version was deployed from commit [`${{ github.sha }}`](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
@@ -46,7 +47,8 @@ jobs:
         if: ${{ failure() }}
         uses: rjstone/discord-webhook-notify@v2
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          severity: error
           message: |
             **Build Failed**
             Commit: [`${{ github.sha }}`](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
