--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,9 +1,14 @@
 name: health check
 
 on:
-  schedule:
-    - cron: "0 6 * * *"
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+#on:
+#  schedule:
+#    - cron: "0 6 * * *"
+#  workflow_dispatch:
 
 jobs:
   healthcheck:
